# archetype_bot

./: .env.example  .gitignore  deploy_vps.sh  docker-compose.yml  ecosystem.config.js  run_db_client.sh  run_decoder.sh  run_hunter.sh  run_ipc.sh  run_listener.sh  run_main.sh  run_simulator.sh
brain/: apex_hunter.py  db_client.py  decoder.py  ipc_sender.py  listener.py  main.py  mock_injector.py  requirements.txt  simulator.py
brain/abis/: aave_pool.json  chainlink.json  erc20.json
brain/tests/: test_decoder.py  test_ipc.py
contracts/script/: DeployArchetype.s.sol
contracts/src/: ArchetypeFlashLoan.sol
database/: schema.sql
document/: detailed_code_explanation_cpp.md  detailed_code_explanation_python.md  detailed_code_explanation_solidity.md  functional_requirements_and_workflow.md  mainnet_roadmap.md  non_functional_requirements.md  onboarding_handover_guide.md  phase4_e2e_test_protocol.md  phase5+6.md  project_summary_and_limitations.md
engine/: CMakeLists.txt
engine/.cache/clangd/index/: config.hpp.2B6D0DAAA4346862.idx  gas_manager.cpp.50D28A6DD0AFEA5E.idx  ipc_receiver.cpp.FC3CF3A54262CE02.idx  keccak.cpp.7ABFA913BA66AD0A.idx  main.cpp.92CC91D01A28A1AE.idx  rlp.cpp.BE2A53895A86440B.idx  rpc_client.cpp.91C50324D1D1F7A2.idx  signer.cpp.5ED47C6CED0FE5FC.idx  tx_builder.cpp.7F240F66EA0D1023.idx  types.hpp.FA6D4A39ED14C3EE.idx
engine/include/: types.hpp
engine/src/: config.hpp  gas_manager.cpp  ipc_receiver.cpp  keccak.cpp  main.cpp  rlp.cpp  rpc_client.cpp  signer.cpp  tx_builder.cpp
engine/tests/: crypto_tests.cpp  run_tests
(+6 files in other folders)
